# Projet-mosaique-image

./: .gitignore  CMakeLists.txt  README.md  _precomputed_strings_10.txt  build.sh  i.sh  stateOfArt.txt  stats_features.txt
Compte-rendus/Compte-rendu-8-video/: link.txt
src/: kmeans_mosaic.cpp  kmeans_mosaic.hpp  main.cpp  statistical_features.cpp  statistical_features.hpp
src/includes/: alignmentMosaic.cpp  alignmentMosaic.hpp  meanFeatureMosaic.cpp  meanFeatureMosaic.hpp
